# QueryPDF

./: .gitignore  README.md  app.py  config.json  pyproject.toml  requirements.txt
