[project]
name = "rag-core"
version = "0.1.0"
description = "QueryPDF is a terminal based RAG tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.11",
    "colorama>=0.4.6",
    "langchain>=0.3.25",
    "nltk>=3.9.1",
    "ollama>=0.5.0",
    "pypdf>=5.5.0",
    "sentence-transformers>=4.1.0",
    "transformers>=4.52.4",
    "yaspin>=3.1.0",
]
